[#50578475] Add a flag to the volunteer table so we can know when an image is defined. Move styling to consistently use the css file. Correct the flicker on the edit link by wrapping image and control in a div, and using mouseenter/mouseleave instead of mouseover/mouseout

--- a/src/main/webapp/css/roms.css
+++ b/src/main/webapp/css/roms.css
@@ -650,26 +650,26 @@ div.project-count {
 /*****************************************************************************/
 /* Edit/Upload Volunteer image                                               */
 /*****************************************************************************/
-.image {
+#volunteer-image img {
     position: relative;
+    height: 143px;
+    width: 114px;
 }
 
-.image-popup {
+#volunteer-image-edit {
     position: absolute;
     top: 175px;
     left: 25px;
     width: 104px;
 }
 
-.image-popup-text {
-    color: white;
+#volunteer-image-edit>a {
+	color: white;
     background: rgb(0, 0, 0);
     opacity: 0.7;
-    padding: 2px;
-}
-
-.img-thumbnail {
-    max-height: 143px;
+    padding: 4px;
+    font-size: 13px;
+    font-weight: bold;
 }
 
 /*****************************************************************************/
